# Taiwu_mods

./: .gitignore  .travis.yml  CMakeLists.txt  CopyMod.ps1  LICENSE  README.md  Repository.json  appveyor.yml  genvsproj - 副本.cmd  genvsproj.cmd  genvsproj.sh  msbuild.sh
.appveyor/: get-dlls.sh  prepare.sh
.travis/: Dockerfile  addnewrelease.py  build-linux.bash  deploy-linux.bash
AllWin/: AllWin.cs  Info.json  readme.txt
AttainmentsCorrection/: AttainmentsCorrection.cs  Info.json  README.md
AutoChooseAttackPart/: AutoChooseAttackPart.cs  Info.json
AutoRepair/: AutoRepair.cs  Info.json  ReadMe.txt
AutoResource/: AutoResource.cs  Info.json  ReadMe.md
AutoWalk/: AutoWalk.cs  Info.json  ReadMe.txt  Settings.xml
BaseResourceMod/: .modignore  BaseResourceMod.cs  CSVPatch.cs  Info.json  README.md  SpriteLoadHelper.cs  SpritePatch.cs
BuriedTreasureDetector/: BuriedTreasureDetector.cs  FindAll.cs  FindMe.cs  Info.json  README.md  Work.cs
CMakeModules/: AssemblyInfo.cs.in  BuildInfo.cs.in  CTestConfig.cmake  FindCSharp.cmake  FindDotNetFrameworkSdk.cmake  FindMSBuild.cmake  FindMono.cmake  FindTestingPrerequisites.cmake  JSONParser.cmake  ProjectName-v11.csproj.in  SolutionName-v11.sln.in  UseCSharp.cmake  UseDotNetFrameworkSdk.cmake  UseMSBuild.cmake  UseMono.cmake  UseTestingPrerequisites.cmake  Vendors.cmake  Version.cmake  VisualStudioGenerator.cmake  Welcome.txt
CharacterFloatInfo/: CHANGELOG.md  CharacterFloatInfo.cs  CharacterFloatInfo1.3.1SP  Info.json  specialSocial.cs
CharmMax/: CharmMax.cs  Info.json  Settings.xml
CharmsForGongFa/: CharmsForGongFa.cs  EveningTwilight.cs  Info.json  ReadMe.md
CosmeticHospital/: CosmeticHospital.cs  Info.json
DoNotDisturb/: DoNotDisTurb.cs  Info.json
DreamLover/: AutoRape_Patch.cs  BeLove_Patch.cs  DreamLover.cs  EndEvent_Rape_Patch.cs  ExpandUtils.cs  GameDataHelper.cs  Info.json  Main.cs  MessageEventManager_EndEvent9001_1_Patch.cs  Nontr_Patch.cs  PatchModule.cs  PeopleLifeAIHelper.cs  PeopleLifeAI_AISetChildren_Patch.cs  PeopleLifeAI_DoTrunAIChange_Patch.cs  PeopleLifeAI_UpdateTileCharsBehavior_Patch.cs  PeopleLifeAI_Utils.cs  README.md  RapeHelper.cs  SerializableDictionary.cs  SetChildren_Patch.cs  Setting.cs  UIDate_DoChangeTrun_Patch.cs
DynamicExecutor/: AssemblyInfo.cs.template  ChangeLog.md  Execute.cs.template  Execute.csproj.template  Execute.csproj.user.template  Info.json  Main.cs  README.md  clean.ps1
EventExtension/: EventExtension.cs  Event_Date.txt  Extension.cs  Info.json
Evolution/: Evolution.cs  Info.json
ExchangeStatPoints/: ExchangeStatPoints.cs  Info.json  info.json
FasterBoot/: FasterBoot.cs  Info.json
GameSpeeder/: GameSpeeder.cs  Info.json  Readme.md  Readme.txt
GayMax/: .modignore  GayMax.cs  Info.json  SevenNineLove_LoadSystem.cs  更新日志.txt
GongFaEditer/: GongFaEditer.cs  Info.json  MakeGui.cs  Patch.cs  readme.txt
GuHandle/: GuiConsultModestly.cs
GuiBaseUI/: BigDataScroll.cs  CreateUI.cs  GuiBaseUI.cs  IconMove.cs  Info.json  ItemCell.cs  Readme.md  Remind.md  Remind.txt  info.json
GuiConsultModestly/: GuiConsultModestly.cs  Info.json  Readme.md
GuiHandle/: CalculationScreenPosition.cs  Control.cs  GuiHand.cs  GuiHandle.cs  GuiMouse.cs  Info.json  ModUDP.cs  Readme.md  Test.cs
GuiMartialArts/: GuiMartialArts.cs  Info.json  MartialArtsData.cs  Readme.md
GuiScroll/: AcrotItem.cs  ActorMenuActorList.cs  GuiScroll.cs  Info.json  NewWorkActor.cs
GuiTest/: GuiTest.cs  Info.json
GuiWarehouse/: GuiWarehouse.cs  Info.json  NewWarehouse.cs  Readme.md  Remind.md  Remind.txt  WarehouseItem.cs  WarehouseUI.cs  info.json
GuiWorkActor/: AcrotItem.cs  GuiWorkActor.cs  Info.json  NewWorkActor.cs  Readme.md  Remind.txt  info.json
GuiWorldNpc/: GuiWorldNpc.cs  NewWorldNpc.cs  NpcItem.cs  Readme.md  info.json
GuiltyNature/: GuiltyNature.cs  Info.json  README.md
HappyLife/: HappyLife.cs  Info.json
HerbRecipes/: HerbRecipes.cs  Info.json
HomeShopSort/: HomeShopSort.cs  Info.json
ICanFly/: CHANGELOG.md  ICanFly.cs  Info.json
IllustratedHandbook/: CHANGELOG.md  IllustratedHandbook.cs  Info.json  README.md  UI.cs  UICreator.cs
InventorySort/: Info.json  InventorySort.cs
Jing_yong_Mod/: Info.json  Jing_yong_Mod.cs  README.md
KeyBoardShortCut/: Helper.cs  Info.json  KeyBoardShortCut.cs  README.md  SerializableDictionary.cs
LKX_BookMerge/: Info.json  LKX_BookMerge.cs  README.md
LKX_CheatMaxPeople/: Info.json  LICENSE  LKX_CheatMaxPeople.cs  README.md
LKX_GongFaSizeToOne/: ChangeLog.md  Class1.cs  Info.json  LKX_GongFaSizeToOne.cs  README.md
LKX_ItemsMerge/: ChangeLog.md  Class1.cs  Info.json  LKX_ItemsMerge.cs  README.md
LKX_LoopedStoryInKunlun/: Info.json  LKX_LoopStoryInKunlun.cs
LKX_NewGameActor/: ChangeLog.md  Class1.cs  Info.json  LKX_NewGameActor.cs  README.md
LKX_QuQuRematch/: Info.json  LKX_QuQuRematch.cs
LongDaoMaid/: Info.json  LongDaoMaid.cs
LongDaoSSR/: Info.json  LongDaoSSR.cs
Majordomo/: .gitignore  .modignore  AutoHarvest.cs  HumanResource.cs  Info.json  Majordomo.cs  README.md  ResourceDynamicallyLoader.cs  ResourceMaintainer.cs
MakeYourWant/: Info.json  MakeYourWant.cs  README.md
ManpowerWork/: Info.json  ManpowerWork.cs
ModsCollection/: CHANGELOG.md  Info.json  ModsCollection.cs  Patchings.cs  README.md  UiStyle.cs  info.json
MoreInfo/: Info.json  MoreInfo.cs  changelog.md
MoreMerchandise/: Info.json  Merchandise.cs  MerchantMoney.cs  MoreMerchandise.cs  README.md
MoveBuilding/: Info.json  MoveBuilding.cs  README.md
NewWorld/: Info.json  NewWorld.cs
NoMoreTrash/: Info.json  NoMoreTrash.cs
NotEnoughHarvest/: Info.json  NotEnoughHarvest.cs  README.md
NpcScan/: ActorItem.cs  Features.cs  Info.json  Item.cs  NpcScan.cs  OptimizeScrollView.cs  Patch.cs  ReadMe.md  ReadMe.txt  UI.cs
PrecisionShooting/: Info.json  PrecisionShooting.cs
QuQuXRay/: Info.json  QuQuXRay.cs  UI.cs
QuickSwap/: Info.json  QuickSwap.cs
ReadAssistant/: Info.json  MakeSheet.cpp  ReadAssistant.cs  Readme.md
ReduceMechanicalLabor/: Info.json  README.md  ReduceMechanicalLabor.cs
Rejuvenation/: Info.json  Rejuvenation.cs  info.json  (+1 more)
(+153 files in other folders)
